<resources>
    <string name="app_name">Note</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="title_text">Record something</string>
    <string name="you_mobile">Your phone number</string>
    <string name="country_code">+86</string>
    <string name="Verification_Code">Verification</string>
    <string name="has_code">Verification</string>
    <string name="input_pwd">Your password</string>
    <string name="new_password">New password</string>
    <string name="confirmpassword">Now confirm</string>
    <string name="resetPassword">Reset password</string>
    <string name="register">Registered</string>
    <string name="example">Your Name</string>
    <string name="nickname">Name</string>
    <string name="password">Password</string>
    <string name="repassword">Confirm</string>
    <string name="login">Login</string>
    <string name="attach_take_pic">Take a photo</string>
    <string name="no_permission_camera">Unauthorized permissions</string>
    <string name="my_image_manager">My album</string>
    <string name="image_manager">Album</string>
    <string name="permission_ok">get the permission successful </string>
    <string name="permission_error">Failed to obtain permission</string>
    <string name="not_set">Not set</string>
    <string name="region">Area</string>
    <string name="Personal_signature">Say something?</string>
    <string name="mobile">Phone</string>
    <string name="send_msg">Send msg</string>
    <string name="add_to_contacts">Add now</string>
    <string name="Head_portrait">Avatar</string>
    <string name="yichat_number">ID</string>
    <string name="me_qrcode">My only code</string>
    <string name="sex">Gender</string>
    <string name="memo">Note</string>
    <string name="pending">Wait to do</string>
    <string name="reminder">Tips</string>
    <string name="image">Pic</string>
    <string name="star">Favorites</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="remember_pass">Remember me pls~</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="note">Note</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="miss_you">Miss you…</string>
    <string name="remind">Remind</string>
</resources>
